tests/negative/runtime/arrayinsert_large_index/input.ci
void main() {
    int[] xs = [1];
    arrayInsert(xs, 99, 2);
}
